<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.she17er.seanm.findabed.SignupScreen"
    tools:showIn="@layout/activity_signup_screen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/usernameDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usernameDesc" />

        <EditText
            android:id="@+id/usernameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name" />

        <TextView
            android:id="@+id/emailDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emailDesc" />

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/phoneDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phoneDesc" />

        <EditText
            android:id="@+id/phoneField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone" />

        <TextView
            android:id="@+id/passwordDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passwordDesc" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/reenterPasswordDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passwordDesc2" />

        <EditText
            android:id="@+id/reenterPasswordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/ageDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ageDesc" />

        <EditText
            android:id="@+id/ageField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/genderDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/genderDesc" />

        <Spinner
            android:id="@+id/genderSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:entries="@array/genderArray" />

        <TextView
            android:id="@+id/vetStatusDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vetStatDesc" />

        <Spinner
            android:id="@+id/vetStatusSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:entries="@array/vetStatArray" />

        <TextView
            android:id="@+id/accountStateDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accountStateDesc" />

        <Spinner
            android:id="@+id/accountStateSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:entries="@array/accountStateArray" />

        <TextView
            android:id="@+id/roleDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/roleDesc" />

        <Spinner
            android:id="@+id/roleDescriptionSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:entries="@array/roleArray" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submitButton" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
