<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.she17er.seanm.findabed.ShelterInspectScreen">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/shelterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shelterName" />

            <TextView
                android:id="@+id/shelterNameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/shelterCapacity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shelterCapacity" />

            <TextView
                android:id="@+id/shelterCapacityField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/shelterAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shelterAddress" />

            <TextView
                android:id="@+id/shelterAddressField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/shelterPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shelterPhoneNumber" />

            <TextView
                android:id="@+id/shelterPhoneNumberField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/shelterGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shelterGender" />

            <TextView
                android:id="@+id/shelterGenderField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/shelterLatitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shelterLatitude" />

            <TextView
                android:id="@+id/shelterLatitudeField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/shelterLongitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shelterLongitude" />

            <TextView
                android:id="@+id/shelterLongitudeField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>
